--- a/templates/pyclasses_oo_attr.py.rs.jinja
+++ b/templates/pyclasses_oo_attr.py.rs.jinja
@@ -10,7 +10,7 @@
 {%- when DynOrFixedType::Fixed with (s) ~%}[
 {%- endmatch -%}
 {%- endif -%}
-{{ ca.rust_type_str|safe }}
+{%- if ca.is_msg | ca.is_oo -%}Py<{%- endif -%}{{ ca.base_type_str|safe }}{%+ if ca.is_msg | ca.is_oo -%}>{%- endif -%}
 {%- if let Some(repeated_type) = ca.base.is_repeated_and_size -%}
 {%- match repeated_type -%}
 {%- when DynOrFixedType::Dyn(_) -%}>
