--- a/templates/data_object_attr.rs.jinja
+++ b/templates/data_object_attr.rs.jinja
@@ -1,25 +1,20 @@
-{%- if let Some(comment_impl) = ca.comment -%}
-//{{comment_impl}}  {{ca.name}}:
+{%- if let Some(comment_impl) = ca.base.comment -%}
+//{{comment_impl}}  {{ca.base.name}}:
 {%- else -%}
-pub {{ca.name}}: {#+ #}
+pub {{ca.base.name}}: {#+ #}
 {%- endif -%}
- {%~ if ca.is_optional -%}Option<{%- endif -%}
-{%- if let Some(repeated_type) = ca.is_repeated_and_size -%}
+ {%~ if ca.base.is_optional -%}Option<{%- endif -%}
+{%- if let Some(repeated_type) = ca.base.is_repeated_and_size -%}
 {%- match repeated_type -%}
 {%- when DynOrFixedType::Dyn(_) ~%}Vec<
-{%- when DynOrFixedType::Fixed with (s) ~%}[
+{%- when DynOrFixedType::Fixed with (s) ~%}FixedArray<
 {%- endmatch -%}
 {%- endif -%}
-{%- match ca.specific_details -%}
-{%- when AttributeDetails::AttributeSimple with (as) -%} {% include "data_object_attr_simple.rs.jinja" %}
-{%- when AttributeDetails::AttributeEnumOrMsg with (s) ~%}{{s}}
-{%- when AttributeDetails::AttributeOneOf with (s) ~%}{{s.name}}
-{%- else -%} BB!
-{%- endmatch -%}
-{%- if let Some(repeated_type) = ca.is_repeated_and_size -%}
+{{ ca.rust_type_str|safe }}
+{%- if let Some(repeated_type) = ca.base.is_repeated_and_size -%}
 {%- match repeated_type -%}
 {%- when DynOrFixedType::Dyn(_) -%}>
-{%- when DynOrFixedType::Fixed with (s) -%};{{s}}]
+{%- when DynOrFixedType::Fixed with (s) -%},{{s}}>
 {%- endmatch -%}
 {%- endif -%}
-{%- if ca.is_optional -%}>{%- endif -%},
+{%- if ca.base.is_optional -%}>{%- endif -%},
