--- a/templates/pyclasses_attr.py.rs.jinja
+++ b/templates/pyclasses_attr.py.rs.jinja
@@ -1,20 +1,19 @@
 {%- if let Some(comment_impl) = ca.base.comment -%}
-//{{comment_impl}}  {{ca.base.name}}:
-{%- else -%}
-{{ca.base.name|pascal_case}}(
-{%- endif -%}
- {%~ if ca.base.is_optional -%}Option<{%- endif -%}
+//{{comment_impl}}
+  {{ca.base.name}}:
+{%- endif -%} {# !ca.is_py_wrapped #}
+{%- if !ca.is_oo +%}  #[pyo3(get, set)]
+{%+ endif +%}  pub {{ca.base.name}}: {%~ if ca.base.is_optional -%}Option<{%- endif -%}
 {%- if let Some(repeated_type) = ca.base.is_repeated_and_size -%}
 {%- match repeated_type -%}
 {%- when DynOrFixedType::Dyn(_) ~%}Vec<
 {%- when DynOrFixedType::Fixed with (s) ~%}[
 {%- endmatch -%}
-{%- endif -%}
-{{ ca.rust_type_str|safe }}
+{%- endif -%} {%+ if ca.is_msg | ca.is_oo -%}Py<{%- endif -%}{{ ca.base_type_str|safe }}{%+ if ca.is_msg | ca.is_oo -%}>{%- endif -%}
 {%- if let Some(repeated_type) = ca.base.is_repeated_and_size -%}
 {%- match repeated_type -%}
 {%- when DynOrFixedType::Dyn(_) -%}>
 {%- when DynOrFixedType::Fixed with (s) -%};{{s}}]
 {%- endmatch -%}
 {%- endif -%}
-{%- if ca.base.is_optional -%}>{%- endif -%}),
+{%- if ca.base.is_optional -%}>{%- endif -%},
