--- a/templates/data_object_attr_type.cpp.jinja
+++ b/templates/data_object_attr_type.cpp.jinja
@@ -1,20 +1,15 @@
-{%- if let Some(comment_impl) = ca.base.comment -%}
-//{{comment_impl}}  {{ca.base.name}}:
-{%- else -%}
-pub {{ca.base.name}}: {#+ #}
-{%- endif -%}
- {%~ if ca.base.is_optional -%}Option<{%- endif -%}
+{%~ if ca.base.is_optional -%}BitisOptional<{%- endif -%}
 {%- if let Some(repeated_type) = ca.base.is_repeated_and_size -%}
 {%- match repeated_type -%}
-{%- when DynOrFixedType::Dyn(_) ~%}Vec<
+{%- when DynOrFixedType::Dyn(_) ~%}DynArray<
 {%- when DynOrFixedType::Fixed with (s) ~%}FixedArray<
 {%- endmatch -%}
 {%- endif -%}
 {{ ca.rust_type_str|safe }}
 {%- if let Some(repeated_type) = ca.base.is_repeated_and_size -%}
 {%- match repeated_type -%}
-{%- when DynOrFixedType::Dyn(_) -%}>
+{%- when DynOrFixedType::Dyn(s) -%},{{s}}>
 {%- when DynOrFixedType::Fixed with (s) -%},{{s}}>
 {%- endmatch -%}
 {%- endif -%}
-{%- if ca.base.is_optional -%}>{%- endif -%},
+{%- if ca.base.is_optional -%}>{%- endif -%}
