--- a/templates/data_oo_attr.rs.jinja
+++ b/templates/data_oo_attr.rs.jinja
@@ -1,9 +1,7 @@
 {%- if let Some(comment_impl) = ca.base.comment -%}
-//{{comment_impl}}  {{ca.base.name}}:
-{%- else -%}
-{{ca.base.name|pascal_case}}(
-{%- endif -%}
- {%~ if ca.base.is_optional -%}Option<{%- endif -%}
+  //{{comment_impl}}
+{%- endif %}
+  {{ca.base.name|pascal_case}}({%~ if ca.base.is_optional -%}Option<{%- endif -%}
 {%- if let Some(repeated_type) = ca.base.is_repeated_and_size -%}
 {%- match repeated_type -%}
 {%- when DynOrFixedType::Dyn(_) ~%}Vec<
